--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221025.64/torch-1.14.0.dev20221021%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221021+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221025.64/torch-1.14.0.dev20221021%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221021+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221025.64/torch-1.14.0.dev20221021%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221021+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221025.64/torch-1.14.0.dev20221021%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221021+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221025.64/torch-1.14.0.dev20221021-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221021-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221025.64/torch_mlir-0.0.1-cp310-cp310-win_amd64.whl'>torch_mlir-0.0.1-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221025.64/torch_mlir-20221025.64-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221025.64-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221025.64/torch_mlir-20221025.64-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221025.64-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221025.64/torch_mlir-20221025.64-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221025.64-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221025.64/torch_mlir-20221025.64-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221025.64-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221025.63/torch-1.14.0.dev20221021%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221021+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221025.63/torch-1.14.0.dev20221021%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221021+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221025.63/torch-1.14.0.dev20221021%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221021+cpu-cp39-cp39-linux_x86_64.whl</a><br />
@@ -205,11 +215,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221004.616/torch_mlir-20221004.616-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221004.616-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221004.616/torch_mlir-20221004.616-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221004.616-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221004.616/torch_mlir-20221004.616-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221004.616-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221003.615/torch-1.13.0.dev20221002%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20221002+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221003.615/torch-1.13.0.dev20221002%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20221002+cpu-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221003.615/torch-1.13.0.dev20221002-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20221002-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221003.615/torch_mlir-20221003.615-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221003.615-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221003.615/torch_mlir-20221003.615-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221003.615-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221003.615/torch_mlir-20221003.615-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221003.615-cp39-cp39-linux_x86_64.whl</a><br />
   </body>
 </html>
