--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,30 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221030.642/torch-1.14.0.dev20221027%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221027+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221030.642/torch-1.14.0.dev20221027%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221027+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221030.642/torch-1.14.0.dev20221027%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221027+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221030.642/torch-1.14.0.dev20221027-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221027-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221030.642/torch_mlir-20221030.642-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221030.642-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221030.642/torch_mlir-20221030.642-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221030.642-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221030.642/torch_mlir-20221030.642-cp310-cp310-win_amd64.whl'>torch_mlir-20221030.642-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221030.642/torch_mlir-20221030.642-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221030.642-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221030.65/torch-1.14.0.dev20221027%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221027+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221030.65/torch-1.14.0.dev20221027%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221027+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221030.65/torch-1.14.0.dev20221027%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221027+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221030.65/torch-1.14.0.dev20221027-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221027-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221030.65/torch_mlir-20221030.65-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221030.65-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221030.65/torch_mlir-20221030.65-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221030.65-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221030.65/torch_mlir-20221030.65-cp310-cp310-win_amd64.whl'>torch_mlir-20221030.65-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221030.65/torch_mlir-20221030.65-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221030.65-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221029.641/torch-1.14.0.dev20221027%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221027+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221029.641/torch-1.14.0.dev20221027%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221027+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221029.641/torch-1.14.0.dev20221027%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221027+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221029.641/torch-1.14.0.dev20221027-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221027-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221029.641/torch_mlir-0.0.1-cp310-cp310-win_amd64.whl'>torch_mlir-0.0.1-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221029.641/torch_mlir-20221029.641-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221029.641-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221029.641/torch_mlir-20221029.641-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221029.641-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221029.641/torch_mlir-20221029.641-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221029.641-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221028.640/torch-1.14.0.dev20221027%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221027+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221028.640/torch-1.14.0.dev20221027%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221027+cpu-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221028.640/torch-1.14.0.dev20221027%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221027+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
@@ -203,23 +227,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221009.621/torch_mlir-20221009.621-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221009.621-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221009.621/torch_mlir-20221009.621-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221009.621-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221009.621/torch_mlir-20221009.621-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221009.621-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221008.620/torch-1.13.0.dev20221004%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20221004+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221008.620/torch-1.13.0.dev20221004%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20221004+cpu-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221008.620/torch-1.13.0.dev20221004-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20221004-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221008.620/torch_mlir-20221008.620-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221008.620-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221008.620/torch_mlir-20221008.620-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221008.620-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221008.620/torch_mlir-20221008.620-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221008.620-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221007.619/torch-1.13.0.dev20221004%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20221004+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221007.619/torch-1.13.0.dev20221004%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20221004+cpu-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221007.619/torch-1.13.0.dev20221004-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20221004-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221007.619/torch_mlir-20221007.619-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221007.619-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221007.619/torch_mlir-20221007.619-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221007.619-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221007.619/torch_mlir-20221007.619-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221007.619-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221006.618/torch-1.13.0.dev20221004%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20221004+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221006.618/torch-1.13.0.dev20221004%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20221004+cpu-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221006.618/torch-1.13.0.dev20221004-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20221004-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221006.618/torch_mlir-20221006.618-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221006.618-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221006.618/torch_mlir-20221006.618-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221006.618-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221006.618/torch_mlir-20221006.618-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221006.618-cp39-cp39-linux_x86_64.whl</a><br />
   </body>
 </html>
