--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch-1.14.0.dev20221028%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221028+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch-1.14.0.dev20221028%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221028+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch-1.14.0.dev20221028%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221028+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch-1.14.0.dev20221028-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221028-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch_mlir-20221102.645-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221102.645-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch_mlir-20221102.645-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221102.645-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch_mlir-20221102.645-cp310-cp310-win_amd64.whl'>torch_mlir-20221102.645-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch_mlir-20221102.645-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221102.645-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221101.644/torch-1.14.0.dev20221028%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221028+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221101.644/torch-1.14.0.dev20221028%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221028+cpu-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221101.644/torch-1.14.0.dev20221028%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221028+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
@@ -201,6 +209,14 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch_mlir-20221013.625-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221013.625-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch_mlir-20221013.625-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221013.625-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch_mlir-20221013.625-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221013.625-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch-1.14.0.dev20221012%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch-1.14.0.dev20221012%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch-1.14.0.dev20221012%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch-1.14.0.dev20221012-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221012-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch_mlir-20221013.58-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221013.58-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch_mlir-20221013.58-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221013.58-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch_mlir-20221013.58-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221013.58-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch_mlir-20221013.58-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221013.58-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch-1.14.0.dev20221012%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch-1.14.0.dev20221012%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch-1.14.0.dev20221012%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp39-cp39-linux_x86_64.whl</a><br />
@@ -215,17 +231,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221012.624/torch_mlir-20221012.624-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221012.624-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221012.624/torch_mlir-20221012.624-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221012.624-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221012.624/torch_mlir-20221012.624-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221012.624-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221011.55/torch-1.14.0.dev20221010%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221010+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221011.55/torch-1.14.0.dev20221010%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221010+cpu-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221011.55/torch-1.14.0.dev20221010-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221010-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221011.55/torch_mlir-20221011.55-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221011.55-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221011.55/torch_mlir-20221011.55-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221011.55-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221011.55/torch_mlir-20221011.55-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221011.55-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221008.620/torch-1.13.0.dev20221004%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20221004+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221008.620/torch-1.13.0.dev20221004%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20221004+cpu-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221008.620/torch-1.13.0.dev20221004-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20221004-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221008.620/torch_mlir-20221008.620-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221008.620-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221008.620/torch_mlir-20221008.620-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221008.620-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221008.620/torch_mlir-20221008.620-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221008.620-cp39-cp39-linux_x86_64.whl</a><br />
   </body>
 </html>
