--- a/package-index/index.html
+++ b/package-index/index.html
@@ -6,6 +6,14 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221130.673/torch-1.14.0.dev20221129-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221129-cp310-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221130.673/torch_mlir-20221130.673-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221130.673-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221130.673/torch-1.14.0.dev20221129%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221129+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221130.67/torch-1.14.0.dev20221122%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221122+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221130.67/torch_mlir-20221130.67-cp310-cp310-win_amd64.whl'>torch_mlir-20221130.67-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221130.67/torch-1.14.0.dev20221122%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221122+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221130.67/torch-1.14.0.dev20221122%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221122+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221130.67/torch_mlir-20221130.67-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221130.67-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221130.67/torch_mlir-20221130.67-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221130.67-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221130.67/torch-1.14.0.dev20221122-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221122-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221130.67/torch_mlir-20221130.67-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221130.67-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221129.672/torch-1.14.0.dev20221122%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221122+cpu-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221129.672/torch_mlir-20221129.672-cp310-cp310-win_amd64.whl'>torch_mlir-20221129.672-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221129.672/torch-1.14.0.dev20221122%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221122+cpu-cp310-cp310-linux_x86_64.whl</a><br />
@@ -212,13 +220,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221103.646/torch_mlir-20221103.646-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221103.646-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221103.646/torch-1.14.0.dev20221028-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221028-cp310-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221103.646/torch_mlir-20221103.646-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221103.646-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch-1.14.0.dev20221028%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221028+cpu-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch_mlir-20221102.645-cp310-cp310-win_amd64.whl'>torch_mlir-20221102.645-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch-1.14.0.dev20221028%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221028+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch-1.14.0.dev20221028%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221028+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch_mlir-20221102.645-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221102.645-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch_mlir-20221102.645-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221102.645-cp37-cp37m-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch-1.14.0.dev20221028-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221028-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221102.645/torch_mlir-20221102.645-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221102.645-cp310-cp310-macosx_11_0_universal2.whl</a><br />
   </body>
 </html>
