--- a/package-index/index.html
+++ b/package-index/index.html
@@ -9,6 +9,14 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221201.674/torch_mlir-20221201.674-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221201.674-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221201.674/torch-1.14.0.dev20221130-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221130-cp310-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221201.674/torch_mlir-20221201.674-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221201.674-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221201.68/torch-1.14.0.dev20221122%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221122+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221201.68/torch_mlir-20221201.68-cp310-cp310-win_amd64.whl'>torch_mlir-20221201.68-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221201.68/torch-1.14.0.dev20221122-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221122-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221201.68/torch_mlir-20221201.68-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221201.68-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221201.68/torch-1.14.0.dev20221122%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221122+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221201.68/torch-1.14.0.dev20221122%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221122+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221201.68/torch_mlir-20221201.68-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221201.68-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221201.68/torch_mlir-20221201.68-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221201.68-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221130.673/torch-1.14.0.dev20221129%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221129+cpu-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221130.673/torch_mlir-20221130.673-cp310-cp310-win_amd64.whl'>torch_mlir-20221130.673-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221130.673/torch-1.14.0.dev20221129-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221129-cp310-none-macosx_10_9_x86_64.whl</a><br />
@@ -216,9 +224,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221105.648/torch_mlir-20221105.648-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221105.648-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221105.648/torch-1.14.0.dev20221104-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221104-cp310-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221105.648/torch_mlir-20221105.648-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221105.648-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221104.647/torch-1.14.0.dev20221028%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221028+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221104.647/torch-1.14.0.dev20221028%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221028+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221104.647/torch_mlir-20221104.647-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221104.647-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221104.647/torch_mlir-20221104.647-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221104.647-cp37-cp37m-linux_x86_64.whl</a><br />
   </body>
 </html>
