--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.89/torch-2.1.0.dev20230305%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230305+cpu-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.89/torch_mlir-20230305.89-cp311-cp311-win_amd64.whl'>torch_mlir-20230305.89-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.89/torch_mlir_no_jit-20230305.89-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_no_jit-20230305.89-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.89/torch_mlir_no_jit-20230305.89-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_no_jit-20230305.89-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.89/torch_mlir_no_jit-20230305.89-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_no_jit-20230305.89-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230305.768/torch-2.1.0.dev20230304%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230304+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230305.768/torch-2.1.0.dev20230304%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230304+cpu-cp311-cp311-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230305.768/torch-2.1.0.dev20230304%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230304+cpu-cp311-cp311-win_amd64.whl</a><br />
@@ -254,13 +259,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch_mlir-20230208.743-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20230208.743-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch_mlir-20230208.743-cp310-cp310-win_amd64.whl'>torch_mlir-20230208.743-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch_mlir-20230208.743-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230208.743-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch-2.0.0.dev20230206%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20230206+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch-2.0.0.dev20230206%2Bcpu-cp310-cp310-win_amd64.whl'>torch-2.0.0.dev20230206+cpu-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch-2.0.0.dev20230206%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.0.0.dev20230206+cpu-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch-2.0.0.dev20230206-cp310-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230206-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch_mlir-20230207.742-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230207.742-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch_mlir-20230207.742-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20230207.742-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch_mlir-20230207.742-cp310-cp310-win_amd64.whl'>torch_mlir-20230207.742-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch_mlir-20230207.742-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230207.742-cp38-cp38-linux_x86_64.whl</a><br />
   </body>
 </html>
